kubernetes/kenobi/database/templates/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: database
  labels:
    istio-injection: enabled
