kubernetes/kenobi/database/templates/postgres.virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: postgres

spec:
  gateways:
    - istio-ingress/feldman-in
  hosts:
    - postgres.feldman.in
  tcp:
    - match:
        - port: 5432
      route:
        - destination:
            host: postgresql.database.svc.cluster.local
            port:
              number: 5432
